--- a/custom_components/livebox/manifest.json
+++ b/custom_components/livebox/manifest.json
@@ -1,13 +1,9 @@
 {
-  "domain": "livebox",
-  "name": "Orange Livebox",
-  "config_flow": true,
-  "documentation": "https://www.home-assistant.io/components/livebox",
-  "requirements": [
-    "aiosysbus==0.1.4"
-  ],
-  "dependencies": [],
-  "codeowners": [
-    "@cyr-ius"
-  ]
+    "domain": "livebox",
+    "name": "Orange Livebox",
+    "config_flow": true,
+    "documentation": "https://www.home-assistant.io/components/livebox",
+    "requirements": ["aiosysbus==0.1.4"],
+    "dependencies": [],
+    "codeowners": ["@cyr-ius"],
 }
