--- a/custom_components/livebox/manifest.json
+++ b/custom_components/livebox/manifest.json
@@ -5,5 +5,5 @@
     "documentation": "https://www.home-assistant.io/components/livebox",
     "requirements": ["aiosysbus==0.1.4"],
     "dependencies": [],
-    "codeowners": ["@cyr-ius"],
+    "codeowners": ["@cyr-ius"]
 }
