--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -6,7 +6,7 @@ name: Python package
 on:
   push:
     branches: [ master , develop ]
-  push_request:
+  pull_request:
     branches: [ master , develop ]
 
 jobs:
