--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,4 +37,4 @@ jobs:
         # stop the build if there are Pylint errors
         # there is a bug with E1136 (https://github.com/PyCQA/pylint/issues/1498)
         # so we temporarily disable it.
-        pylint --disable=I,C,R,W0511,W0231,E1136,W0102,W0201 --extension-pkg-whitelist=numpy
+        pylint --disable=I,C,R,W0511,W0231,E1136,W0102,W0201 --extension-pkg-whitelist=numpy .
