--- a/custom_components/livebox/manifest.json
+++ b/custom_components/livebox/manifest.json
@@ -5,12 +5,12 @@
     "documentation": "https://github.com/cyr-ius/hass-livebox-component",
     "issue_tracker": "https://github.com/cyr-ius/hass-livebox-component/issues",
     "requirements": ["aiosysbus==0.2.0"],
-    "dependencies": [],
+    "dependencies": ["ssdp"],
     "codeowners": ["@cyr-ius"],
     "iot_class": "local_polling",
     "ssdp": [{
-        "friendly name": "Orange Livebox",
-        "deviceType": "urn:schemas-upnp-org:device:InternetGatewayDevice:2"
+        "st": "urn:schemas-upnp-org:device:InternetGatewayDevice:2",
+        "friendlyName": "Orange Livebox"
     }],
     "version": "1.7.3"
 }
