replace setup_platforms to forward_entry_setups

--- a/custom_components/livebox/manifest.json
+++ b/custom_components/livebox/manifest.json
@@ -12,5 +12,7 @@
         "st": "urn:schemas-upnp-org:device:InternetGatewayDevice:2",
         "friendlyName": "Orange Livebox"
     }],
-    "version": "1.8.2"
+    "loggers": ["aiosysbus"],
+    "version": "1.8.3"
+
 }
