--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -5,13 +5,12 @@ name: Python package
 
 on:
   push:
-    branches: [ master , develop ]
+    branches: [master, develop]
   pull_request:
-    branches: [ master , develop ]
+    branches: [master, develop]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 2
@@ -19,11 +18,15 @@ jobs:
         python-version: ["3.9", "3.10"]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+    steps:
+      - name: 📥 Checkout the repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -31,10 +34,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Lint with pylint
-      run: |
-        pip install pylint
-        # stop the build if there are Pylint errors
-        # there is a bug with E1136 (https://github.com/PyCQA/pylint/issues/1498)
-        # so we temporarily disable it.
-        pylint --disable=I,C,R,W0511,W0231,E1136,W0102,W0201 --extension-pkg-whitelist=numpy .
+        run: |
+          pip install pylint
+          # stop the build if there are Pylint errors
+          # there is a bug with E1136 (https://github.com/PyCQA/pylint/issues/1498)
+          # so we temporarily disable it.
+          pylint --disable=I,C,R,W0511,W0231,E1136,W0102,W0201 --extension-pkg-whitelist=numpy .
