--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,14 +3,11 @@
 
 name: Python package
 
-on:
-  push:
-    branches: [master, develop]
-  pull_request:
-    branches: [master, develop]
+on: [push, pull_request]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 2
@@ -26,18 +23,24 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-    - name: Lint with pylint
+      - name: Install dependencies
         run: |
-          pip install pylint
-          # stop the build if there are Pylint errors
-          # there is a bug with E1136 (https://github.com/PyCQA/pylint/issues/1498)
-          # so we temporarily disable it.
-          pylint --disable=I,C,R,W0511,W0231,E1136,W0102,W0201 --extension-pkg-whitelist=numpy .
+          python -m pip install --upgrade pip
+          python -m pip install flake8 pylint
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Lint with pylint
+          run: |
+            pip install pylint
+            # stop the build if there are Pylint errors
+            # there is a bug with E1136 (https://github.com/PyCQA/pylint/issues/1498)
+            # so we temporarily disable it.
+            pylint --disable=I,C,R,W0511,W0231,E1136,W0102,W0201 --extension-pkg-whitelist=numpy .
