--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -22,12 +22,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pylint
+          python -m pip install flake8 pylint homeassistant
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
         run: |
-          pip install flake8
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -35,7 +34,6 @@ jobs:
 
       - name: Lint with pylint
         run: |
-          pip install pylint
           # stop the build if there are Pylint errors
           # there is a bug with E1136 (https://github.com/PyCQA/pylint/issues/1498)
           # so we temporarily disable it.
