--- a/.github/workflows/hacs.yml
+++ b/.github/workflows/hacs.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   hacs:
     name: HACS Action
+    if: github.repository_owner == 'cyr-ius'
     runs-on: "ubuntu-latest"
     steps:
       - name: 📥 Checkout the repository
