--- a/custom_components/livebox/services.yaml
+++ b/custom_components/livebox/services.yaml
@@ -1,7 +1,8 @@
 # Livebox service entries description.
 
 remove_call_missed:
-  description: Remove call missed
+  name: Remove call missed
+  description: Remove a missed call or all if not any specified
   fields:
     callId:
       name: Call Id
