--- a/custom_components/livebox/manifest.json
+++ b/custom_components/livebox/manifest.json
@@ -1,17 +1,19 @@
 {
-    "domain": "livebox",
-    "name": "Orange Livebox",
-    "codeowners": ["@cyr-ius"],
-    "config_flow": true,
-    "dependencies": ["ssdp"],
-    "documentation": "https://github.com/cyr-ius/hass-livebox-component",
-    "iot_class": "local_polling",
-    "issue_tracker": "https://github.com/cyr-ius/hass-livebox-component/issues",
-    "loggers": ["aiosysbus"],
-    "requirements": ["aiosysbus==1.0.1"],
-    "ssdp": [{
-        "st": "urn:schemas-upnp-org:device:InternetGatewayDevice:2",
-        "friendlyName": "Orange Livebox"
-    }],
-    "version": "2.0.0"
+  "domain": "livebox",
+  "name": "Orange Livebox",
+  "codeowners": ["@cyr-ius"],
+  "config_flow": true,
+  "dependencies": ["ssdp"],
+  "documentation": "https://github.com/cyr-ius/hass-livebox-component",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/cyr-ius/hass-livebox-component/issues",
+  "loggers": ["aiosysbus"],
+  "requirements": ["aiosysbus==1.0.1"],
+  "ssdp": [
+    {
+      "st": "urn:schemas-upnp-org:device:InternetGatewayDevice:2",
+      "friendlyName": "Orange Livebox"
+    }
+  ],
+  "version": "2.0.0"
 }
